--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="#" style="padding-left: 27px"><span>Business</span></a>
         <a href="#" style="padding-left: 27px"><span>About</span></a>
         <a href="#" style="padding-left: 27px"><span>How Search works</span></a>
-        <div style="float: right; display: inline;">  
+        <div style="float: right; display: inline; padding-right: 25px">  
             <a href="#" style="padding-left: 27px"><span>Privacy</span></a>
             <a href="#" style="padding-left: 27px"><span>Terms</span></a>
             <a href="#" style="padding-left: 27px"><span>Settings</span></a>
